--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
-        <p>The datasource is <a href="https://www.kaggle.com/datasets/unsdsn/world-happiness" target=" _blank">some data repository online</href>.</p>
+        <p>The datasource can be found <a href="https://www.kaggle.com/datasets/unsdsn/world-happiness" target=" _blank">here</href>.</p>
       </div>
     </div>
   </div>
